# Smart-Waste-Segregation-And-Gamification

./: README.md  detector.py
Game/: README.md  arduino_controller.py  game_logic.py  main.py  pyproject.toml  rpi_controller.py  setup.sh  test_gpio.py
Game/arduino_sketch/waste_controller/: waste_controller.ino
Game/static/css/: style.css
Game/static/js/: controls.js  game.js  socket.js
Game/templates/: index.html
